<?xml version="1.0"?>
<package>
  <name>cob_frame_tracker</name>
  <version>0.6.8</version>
  <description>The cob_frame_tracker package</description>

  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export>

  </export>
</package>
