<package format="2">
  <name>cob_frame_tracker</name>
  <version>0.7.8</version>
  <description>The cob_frame_tracker package</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>cob_srvs</depend>
  <depend>control_toolbox</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
