<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_frame_tracker</name>
  <version>0.8.21</version>
  <description>The cob_frame_tracker package contains nodes that publish Twist commands based on the distance to the desired tf frame target.</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>boost</depend>
  <depend>cob_srvs</depend>
  <depend>control_toolbox</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend condition="$ROS_DISTRO == melodic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
