<?xml version="1.0"?>
<package>
  <name>cob_hardware_interface</name>
  <version>0.5.0</version>
  <description>
    This package implements the cob_hardware_interface.
    The interface uses topic communication rather than direct pointer access to the drivers.
    I.e. it publishs the desired velocity to a topic and reads from the /joint_states topic.
    Thus, it can be used for both velocity-controlled real hardware as well as velocity-controlled simulation (i.e. using the JointVelocityControllers)
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cob_hardware_interface</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>brics_actuator</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>brics_actuator</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
