<?xml version="1.0"?>
<package format="2">
  <name>cob_mecanum_controller</name>
  <version>0.0.0</version>
  <description>The cob_mecanum_controller package</description>

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
