<?xml version="1.0"?>
<package format="2">
  <name>cob_mecanum_controller</name>
  <version>0.7.10</version>
  <description>
    The cob_mecanum_controller_node provides a lightweight base controller for mecanum drive robots. 
    The out/input for the wheel command/state are wheel velocities in rad/s for the wheels 
    [front left, front right, rear left, rear right]
  </description>

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
