<package format="2">
  <name>cob_model_identifier</name>
  <version>0.8.0</version>
  <description>The cob_model_identifier package</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm-cm@ipa.fhg.de">Christoph Mark</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <exec_depend>rospy</exec_depend>

</package>
