<?xml version="1.0"?>
<package>
  <name>cob_obstacle_distance</name>
  <version>0.0.1</version>
  <description>The cob_obstacle_distance package</description>

  <author email="fxm-mb@ipa.fhg.de">Marco Bezzon</author>
  <maintainer email="fxm-mb@ipa.fhg.de">Marco Bezzon</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend>eigen</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
