<package format="2">
  <name>cob_obstacle_distance</name>
  <version>0.7.7</version>
  <description>The cob_obstacle_distance package</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm-mb@ipa.fhg.de">Marco Bezzon</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>assimp-dev</depend>
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cob_control_msgs</depend>
  <depend>cob_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>libfcl-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>pkg-config</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
